--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "teamhack"
+name = "teamhack_dns"
 # TODO version needs to be gotten from environment
 #version = "1.0.0"
 dynamic = ["version"]
