--- a/.github/workflows/pkgrel.yml
+++ b/.github/workflows/pkgrel.yml
@@ -143,12 +143,17 @@ jobs:
       env:
         TEAMHACK_VERSION: ${{ steps.tag_version.outputs.new_tag }}
 
-    - name: Deploy Docker Image
+    - name: Tag Docker Image
       run: |
-        docker push     "innovanon/teamhack_dns:$TEAMHACK_VERSION"
-        docker push      innovanon/teamhack_dns
+        docker tag      "innovanon/teamhack_dns:$TEAMHACK_VERSION" \
+                         innovanon/teamhack_dns:latest
       env:
         TEAMHACK_VERSION: ${{ steps.tag_version.outputs.new_tag }}
+
+
+    - name: Deploy Docker Image
+      run: |
+        docker push      innovanon/teamhack_dns
 
     # Service containers to run with `container-job`
     services:
