--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,8 @@ services:
     # TODO
     depends_on:
       postgres:
-        condition: service_healthy
+        condition: service_started
+        #condition: service_healthy
       syslog:
         condition: service_started
 
