--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,17 @@
 [project]
-name = "teamhack_dns"
+name = "import_db"
 # TODO version needs to be gotten from environment
 #version = "1.0.0"
 dynamic = ["version"]
 description = "Hack the Box Team Support Services"
 
 dependencies = [
-  "dnslib",
+  "pymetasploit3",
+  "flask",
   #"json",
-  "psycopg2",
+  #"psycopg2",
   #"socket",
-  "teamhack_db",
+  #"teamhack_db",
 ]
 
 [project.optional-dependencies]
