--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,25 @@
 version: '3.8'
 services:
-  import_db:
-    env_file: .env
-    image: innovanon/import_db
-    container_name:  import_db
+  nmap:
+    #image: innovanon/teamhack_nmap
+    build: .
+    container_name:  teamhack_nmap
     ports:
-      - "0.0.0.0:65432:65432/tcp"
+      - "0.0.0.0:53:53/udp"
     volumes:
-      #- import-db:/var/teamhack/etc:ro
       - syslog-client:/etc/rsyslog.d:ro
     restart:         always
-    #command: ["-S", "-U", $USER, "-P", $PASSWORD]
     #network_mode:    service:vpn-s1
     #healthcheck:
+    ##  test: ["CMD-SHELL", "exec 3<> /dev/tcp/0.0.0.0/3633 ; cat <&3 ; exec 3<&-"]
     #  test: ["CMD-SHELL", "nslookup hackthebox.com 0.0.0.0"]
     #  interval:      1m
     #  timeout:       3s
     #  retries:       10
     depends_on:
-      msfrpcd:
+      import_db:
         condition: service_started
       syslog:
         condition: service_started
-
-#volumes:
-#  import-db:
+        #condition:   service_healthy
 
