--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "import_db"
+name = "teamhack_nmap"
 # TODO version needs to be gotten from environment
 #version = "1.0.0"
 dynamic = ["version"]
 description = "Hack the Box Team Support Services"
 
 dependencies = [
-  "pymetasploit3",
+  #"pymetasploit3",
   "flask",
   #"json",
   #"psycopg2",
