--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name:  teamhack_nmap
     ports:
-      - "0.0.0.0:53:53/udp"
+      - "0.0.0.0:55432:55432/tcp"
     volumes:
       - syslog-client:/etc/rsyslog.d:ro
     restart:         always
