--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
     #  timeout:       3s
     #  retries:       10
     depends_on:
-      import_db:
-        condition: service_started
+      #import_db:
+      #  condition: service_started
       syslog:
         condition: service_started
         #condition:   service_healthy
