--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,12 +9,11 @@ services:
     #  - syslog-client:/etc/rsyslog.d:ro
     restart:         always
     #network_mode:    service:vpn-s1
-    #healthcheck:
-    ##  test: ["CMD-SHELL", "exec 3<> /dev/tcp/0.0.0.0/3633 ; cat <&3 ; exec 3<&-"]
-    #  test: ["CMD-SHELL", "nslookup hackthebox.com 0.0.0.0"]
-    #  interval:     10s
-    #  timeout:       3s
-    #  retries:       10
+    healthcheck:
+      test: ["CMD-SHELL", "nmap", "-p", "55432", "0.0.0.0"]
+      interval:     10s
+      timeout:       3s
+      retries:       10
     depends_on:
       import_db:
         condition: service_started
